# Anthraxx

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: board.cpp  board.h  eval.cpp  eval.h  global_includes.h  lookups.h  move.cpp  move.h  movepicker.cpp  movepicker.h  search.cpp  search.h  tests.h  tt.h  uai.cpp
